test/cases/aarch64-macos/hello_world_with_updates.0.zig
// error
// output_mode=Exe
// target=aarch64-macos
//
// :110:9: error: root struct of file 'tmp' has no member named 'main'
